# Tetris-ever-mixer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
msvc/: Tetris-ever-mixer.sln  Tetris-ever-mixer.vcxproj  Tetris-ever-mixer.vcxproj.filters  Tetris-ever.sln  Tetris-ever.vcxproj  packages.config
snap/: snapcraft.yaml
snap/gui/: sdl2snake.desktop  tetris-ever-mixer.desktop  tetris-ever.desktop
src/: config.h  main.c  tetris.c  tetris.h
